Cerca del second challenge

--- a/module-1/lab-string-operations/your-code/challenge-2.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-2.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,13 +88,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
     "corpus = []\n",
+    "# Write your code here\n",
+    "docs = ['doc1.txt', 'doc2.txt', 'doc3.txt']\n",
+    "for files in docs:\n",
+    "    x = open(files,'r')\n",
+    "    corpus.append (x.read())\n",
     "\n",
-    "# Write your code here\n"
+    "bow = []\n",
+    "terms_freq = []\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -106,9 +114,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Ironhack is cool.', 'I love Ironhack.', 'I am a student at Ironhack.']\n"
+     ]
+    }
+   ],
    "source": [
     "print(corpus)"
    ]
@@ -136,11 +152,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack is cool', 'i love ironhack', 'i am a student at ironhack']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "h = []\n",
+    "for e in corpus:\n",
+    "    x = e.lower().replace(\".\",\"\")\n",
+    "    h.append (x)\n",
+    "corpus = h          \n",
+    "print(corpus)\n"
    ]
   },
   {
@@ -152,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,11 +202,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "for e in corpus:\n",
+    "    for word in e.split (\" \"):\n",
+    "        if word not in bag_of_words:\n",
+    "            bag_of_words.append(word)\n",
+    "        \n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -192,9 +229,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack', 'is', 'cool', 'i', 'love', 'am', 'a', 'student', 'at']\n"
+     ]
+    }
+   ],
    "source": [
     "print(bag_of_words)"
    ]
@@ -208,11 +253,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
     "term_freq = []\n",
+    "\n",
+    "for e in corpus:\n",
+    "    term = []\n",
+    "    for t in bag_of_words:\n",
+    "        if t in e.split (\" \"): \n",
+    "            term.append(1)\n",
+    "        else: \n",
+    "            term.append(0)\n",
+    "    term_freq.append(term)\n",
+    "        \n",
+    "            \n",
+    "    #print (e)\n",
+    "    #for i in bag_of_words:\n",
+    "         #if \n",
     "\n",
     "# Write your code here"
    ]
@@ -228,9 +287,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 1, 1, 0, 0, 0, 0, 0, 0], [1, 0, 0, 1, 1, 0, 0, 0, 0], [1, 0, 0, 1, 0, 1, 1, 1, 1]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(term_freq)"
    ]
@@ -333,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
