--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,26 +282,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'123abc'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123abc\n",
+      "abc123\n",
+      "JohnSmith1\n",
+      "ABBY4\n"
+     ]
     }
    ],
    "source": [
-    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
+    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']    \n",
     "\n",
+    "for x in data:\n",
+    "    if re.search(\"\\d\",x):\n",
+    "        print(x)\n",
     "\n",
-    "    \n",
-    "asd(data)\n",
     "        "
    ]
   },
@@ -320,28 +321,31 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
-    "# Your code here:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "27\n"
+      "123abc\n",
+      "abc123\n",
+      "JohnSmith1\n"
      ]
     }
    ],
    "source": [
-    "print(3**3)"
+    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
+    "# Your code here:\n",
+    "for i in data:\n",
+    "    if re.search(\"[a-z]\",i) and re.search (\"\\d\",i):\n",
+    "        print(i)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
