--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Durante un tiempo no estuvo segura de si su marido era su marido.'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "str_list = ['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "' '.join(str_list) + \".\"\n"
    ]
   },
   {
@@ -50,12 +62,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Grocery list: bananas, bread, brownie mix, broccoli.'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
-    "# Your code here:\n"
+    "\n",
+    "\"Grocery list: \" + \", \".join(e.lower() for e in food_list if e.startswith(\"b\")or e.startswith(\"B\")) + (\".\")\n",
+    "\n"
    ]
   },
   {
@@ -69,9 +94,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the circle with radius: 4.5 is:63.61725123519331\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -80,6 +113,24 @@
     "radius = 4.5\n",
     "\n",
     "def area(x, pi = math.pi):\n",
+    "    import math\n",
+    "\n",
+    "string1 = \"The area of the circle with radius:\"\n",
+    "string2  = \"is:\"\n",
+    "radius = 4.5\n",
+    "\n",
+    "def area(x, pi = math.pi):\n",
+    "    y=x*x*pi\n",
+    "\n",
+    "    return y\n",
+    "\n",
+    "area (radius)\n",
+    "\n",
+    "print(string1 + \" \" + str(radius) + \" \" + (string2) +str(area(radius)))\n",
+    "   \n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    # This function takes a radius and returns the area of a circle. We also pass a default value for pi.\n",
     "    # Input: Float (and default value for pi)\n",
     "    # Output: Float\n",
@@ -106,9 +157,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 178,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Some': 2, 'say': 3, 'the': 1, 'world': 1, 'will': 1, 'end': 1, 'in': 2, 'fire': 2, 'ice': 2, 'From': 1, 'what': 1, 'I’ve': 1, 'tasted': 1, 'of': 2, 'desire': 1, 'I': 3, 'hold': 1, 'with': 1, 'those': 1, 'who': 1, 'favor': 1, 'But': 1, 'if': 1, 'it': 1, 'had': 1, 'to': 1, 'perish': 1, 'twice': 1, 'think': 1, 'know': 1, 'enough': 1, 'hate': 1, 'To': 1, 'that': 1, 'for': 1, 'destruction': 1, 'Is': 1, 'also': 1, 'great': 1, 'And': 1, 'would': 1, 'suffice': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
@@ -120,7 +179,17 @@
     "Is also great\n",
     "And would suffice.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "\n",
+    "\n",
+    "a = poem.replace('\\n',' ').replace(',', '').replace('.','').split()\n",
+    "\n",
+    "diccionario = {}\n",
+    "\n",
+    "for i in a:\n",
+    "    diccionario[i] = diccionario.get (i, 0)+1\n",
+    "\n",
+    "print (diccionario)\n",
+    "\n"
    ]
   },
   {
@@ -132,9 +201,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 251,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'was', 'angry', 'with', 'my', 'friend;', 'i', 'told', 'my', 'wrath', 'my', 'wrath', 'did', 'end', 'i', 'was', 'angry', 'with', 'my', 'foe:', 'i', 'told', 'it', 'not', 'my', 'wrath', 'did', 'grow', 'and', 'i', 'waterd', 'it', 'in', 'fears', 'night', 'morning', 'with', 'my', 'tears:', 'and', 'i', 'sunned', 'it', 'with', 'smiles', 'and', 'with', 'soft', 'deceitful', 'wiles', 'and', 'it', 'grew', 'both', 'day', 'and', 'night', 'till', 'it', 'bore', 'an', 'apple', 'bright', 'and', 'my', 'foe', 'beheld', 'it', 'shine', 'and', 'he', 'knew', 'that', 'it', 'was', 'mine', 'and', 'into', 'my', 'garden', 'stole', 'when', 'the', 'night', 'had', 'veild', 'the', 'pole;', 'in', 'the', 'morning', 'glad', 'i', 'see;', 'my', 'foe', 'outstretched', 'beneath', 'the', 'tree']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'angry',\n",
+       " 'apple',\n",
+       " 'beheld',\n",
+       " 'beneath',\n",
+       " 'bore',\n",
+       " 'both',\n",
+       " 'bright',\n",
+       " 'day',\n",
+       " 'deceitful',\n",
+       " 'did',\n",
+       " 'end',\n",
+       " 'fears',\n",
+       " 'foe',\n",
+       " 'foe:',\n",
+       " 'friend;',\n",
+       " 'garden',\n",
+       " 'glad',\n",
+       " 'grew',\n",
+       " 'grow',\n",
+       " 'had',\n",
+       " 'he',\n",
+       " 'i',\n",
+       " 'into',\n",
+       " 'knew',\n",
+       " 'mine',\n",
+       " 'morning',\n",
+       " 'my',\n",
+       " 'night',\n",
+       " 'not',\n",
+       " 'outstretched',\n",
+       " 'pole;',\n",
+       " 'see;',\n",
+       " 'shine',\n",
+       " 'smiles',\n",
+       " 'soft',\n",
+       " 'stole',\n",
+       " 'sunned',\n",
+       " 'tears:',\n",
+       " 'that',\n",
+       " 'till',\n",
+       " 'told',\n",
+       " 'tree',\n",
+       " 'veild',\n",
+       " 'was',\n",
+       " 'waterd',\n",
+       " 'when',\n",
+       " 'wiles',\n",
+       " 'with',\n",
+       " 'wrath'}"
+      ]
+     },
+     "execution_count": 251,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "blacklist = ['and', 'as', 'an', 'a', 'the', 'in', 'it']\n",
     "\n",
@@ -158,6 +293,24 @@
     "In the morning glad I see; \n",
     "My foe outstretched beneath the tree.\"\"\"\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "a = poem.lower().replace('\\n',' ').replace(',', '').replace('.','').replace('&','').split()\n",
+    "\n",
+    "b = [i for i in a if i.isalpha()]\n",
+    "\n",
+    "print (a)\n",
+    "\n",
+    "\n",
+    "blacklist_set = set(blacklist)\n",
+    "\n",
+    "\n",
+    "c = set(a)\n",
+    "\n",
+    "c.difference(blacklist_set)\n",
+    "\n",
+    "\n",
     "# Your code here:\n"
    ]
   },
@@ -172,14 +325,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 252,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['T', 'P']"
+      ]
+     },
+     "execution_count": 252,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "poem = \"\"\"The apparition of these faces in the crowd;\n",
     "Petals on a wet, black bough.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "(re.findall('[A-Z]', poem))\n"
    ]
   },
   {
@@ -191,13 +355,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 337,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123abc\n",
+      "abc123\n",
+      "JohnSmith1\n",
+      "ABBY4\n"
+     ]
+    }
+   ],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
     "\n",
-    "# Your code here:\n"
+    "\n",
+    "for d in data:\n",
+    "    if re.search('\\d+', d):\n",
+    "        print (d)\n"
    ]
   },
   {
@@ -213,13 +391,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 348,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123abc\n",
+      "abc123\n",
+      "JohnSmith1\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
+    "\n",
+    "for i in data:\n",
+    "    if re.search('[a-z]', i) and re.search(\"\\d\", i):\n",
+    "        print (i)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
-    "# Your code here:\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -238,7 +436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
