--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -157,6 +157,57 @@
       "['Some', 'say', 'the', 'world', 'will', 'end', 'in', 'fire', 'Some', 'say', 'in', 'ice', 'From', 'what', 'I’ve', 'tasted', 'of', 'desire', 'I', 'hold', 'with', 'those', 'who', 'favor', 'fire', 'But', 'if', 'it', 'had', 'to', 'perish', 'twice', 'I', 'think', 'I', 'know', 'enough', 'of', 'hate', 'To', 'say', 'that', 'for', 'destruction', 'ice', 'Is', 'also', 'great', 'And', 'would', 'suffice']\n",
       "['Some', 'say', 'the', 'world', 'will', 'end', 'in', 'fire', 'Some', 'say', 'in', 'ice', 'From', 'what', 'I’ve', 'tasted', 'of', 'desire', 'I', 'hold', 'with', 'those', 'who', 'favor', 'fire', 'But', 'if', 'it', 'had', 'to', 'perish', 'twice', 'I', 'think', 'I', 'know', 'enough', 'of', 'hate', 'To', 'say', 'that', 'for', 'destruction', 'ice', 'Is', 'also', 'great', 'And', 'would', 'suffice']\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Some': 2,\n",
+       " 'say': 3,\n",
+       " 'the': 1,\n",
+       " 'world': 1,\n",
+       " 'will': 1,\n",
+       " 'end': 1,\n",
+       " 'in': 2,\n",
+       " 'fire': 2,\n",
+       " 'ice': 2,\n",
+       " 'From': 1,\n",
+       " 'what': 1,\n",
+       " 'I’ve': 1,\n",
+       " 'tasted': 1,\n",
+       " 'of': 2,\n",
+       " 'desire': 1,\n",
+       " 'I': 3,\n",
+       " 'hold': 1,\n",
+       " 'with': 1,\n",
+       " 'those': 1,\n",
+       " 'who': 1,\n",
+       " 'favor': 1,\n",
+       " 'But': 1,\n",
+       " 'if': 1,\n",
+       " 'it': 1,\n",
+       " 'had': 1,\n",
+       " 'to': 1,\n",
+       " 'perish': 1,\n",
+       " 'twice': 1,\n",
+       " 'think': 1,\n",
+       " 'know': 1,\n",
+       " 'enough': 1,\n",
+       " 'hate': 1,\n",
+       " 'To': 1,\n",
+       " 'that': 1,\n",
+       " 'for': 1,\n",
+       " 'destruction': 1,\n",
+       " 'Is': 1,\n",
+       " 'also': 1,\n",
+       " 'great': 1,\n",
+       " 'And': 1,\n",
+       " 'would': 1,\n",
+       " 'suffice': 1}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -181,8 +232,7 @@
     "e=poem.replace('\\n',' ').replace('.','').replace(',','').split(' ')\n",
     "print(e)\n",
     "\n",
-    "keys=words\n",
-    "values=\n",
+    "dict((i, e.count(i)) for i in e)\n",
     "# Your code here:\n"
    ]
   },
@@ -197,7 +247,15 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'was', 'angry', 'with', 'my', 'friend;', 'i', 'told', 'my', 'wrath', 'my', 'wrath', 'did', 'endi', 'was', 'angry', 'with', 'my', 'foe', 'i', 'told', 'not', 'my', 'wrath', 'did', 'grow', 'i', 'waterd', 'fearsnight', '&', 'morning', 'with', 'my', 'tears', 'i', 'sunned', 'with', 'smilesand', 'with', 'soft', 'deceitful', 'wiles', 'grew', 'both', 'day', 'night', 'till', 'bore', 'apple', 'bright', 'my', 'foe', 'beheld', 'shineand', 'he', 'knew', 'that', 'was', 'mine', 'into', 'my', 'garden', 'stole', 'when', 'night', 'had', 'veild', 'pole;', 'morning', 'glad', 'i', 'see;', 'my', 'foe', 'outstretched', 'beneath', 'tree']\n"
+     ]
+    }
+   ],
    "source": [
     "blacklist = ['and', 'as', 'an', 'a', 'the', 'in', 'it']\n",
     "\n",
@@ -221,7 +279,19 @@
     "In the morning glad I see; \n",
     "My foe outstretched beneath the tree.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "\n",
+    "e=poem.lower().replace('\\n','').replace('.','').replace(',','').replace(':','').split(' ')\n",
+    "poem2=[]\n",
+    "for i in e:\n",
+    "    if i not in blacklist:\n",
+    "        poem2.append(i)\n",
+    "print(poem2)\n",
+    "\n",
+    "#if thing in some_list: some_list.remove(thing)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -237,11 +307,23 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['T', 'P']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "poem = \"\"\"The apparition of these faces in the crowd;\n",
     "Petals on a wet, black bough.\"\"\"\n",
     "\n",
+    "re.findall('[A-Z]',poem)\n",
     "# Your code here:\n"
    ]
   },
@@ -254,13 +336,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1', 'ABBY4']\n"
+     ]
+    }
+   ],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
+    "# m = re.search('(?<=abc)def', 'abcdef')\n",
+    "data2=[]\n",
+    "# Your code here:\n",
+    "for i in data:\n",
+    "    if re.search('[\\d]',i):\n",
+    "        data2.append(i)\n",
+    "print(data2)\n",
     "\n",
-    "# Your code here:\n"
+    "#print(m)"
    ]
   },
   {
@@ -276,13 +373,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1']\n"
+     ]
+    }
+   ],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "data2=[]\n",
+    "# Your code here:\n",
+    "for i in data:\n",
+    "    if re.search('[\\d]',i) and re.search('[a-z]' ,i):\n",
+    "        data2.append(i)\n",
+    "print(data2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
