challenge 2 casi terminado

--- a/module-1/lab-string-operations/your-code/challenge-2.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-2.ipynb
@@ -72,11 +72,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Ironhack is cool.', 'I am a student at Ironhack.', 'I love Ironhack.']\n"
+     ]
+    }
+   ],
    "source": [
-    "docs = ['doc1.txt', 'doc2.txt', 'doc3.txt']"
+    "files = [f for f in os.listdir('../your-code') if f.endswith('.txt')]\n",
+    "leer =[open(f, 'r').readlines()[0] for f in files] \n",
+    "print(leer)"
    ]
   },
   {
@@ -88,13 +98,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "corpus = []\n",
-    "\n",
-    "# Write your code here\n"
+    "#with open(\"doc1.txt\") as file: corpus = [corpus for corpus in file]\n",
+    "import os\n",
+    "#files = [f for f in os.listdir('../your-code') if f.endswith('.txt')]"
    ]
   },
   {
@@ -106,10 +116,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack is cool', 'i am a student at ironhack', 'i love ironhack']\n"
+     ]
+    }
+   ],
    "source": [
+    "corpus = [w.lower().replace(\".\",\"\") for w in leer] \n",
     "print(corpus)"
    ]
   },
@@ -136,11 +155,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack is cool', 'i am a student at ironhack', 'i love ironhack']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "corpus = [w.lower().replace(\".\",\"\") for w in leer]  \n",
+    "print(corpus)"
    ]
   },
   {
@@ -172,11 +200,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'at', 'ironhack', 'student', 'is', 'a', 'love', 'am', 'cool']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "lst =\" \".join(corpus).split()\n",
+    "bag_of_words= (list(set(lst)))\n",
+    "\n",
+    "print(bag_of_words)\n"
    ]
   },
   {
@@ -192,9 +231,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'at', 'ironhack', 'student', 'is', 'a', 'love', 'am', 'cool']\n"
+     ]
+    }
+   ],
    "source": [
     "print(bag_of_words)"
    ]
@@ -208,12 +255,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
-    "term_freq = []\n",
+    "term_freq=[]\n",
     "\n",
+    "for f in corpus:\n",
+    "    z=[]\n",
+    "    for i in bag_of_words:\n",
+    "        z.append(f.split(\" \").count(i))\n",
+    "    term_freq.append(z)\n",
+    "    \n",
+    "#term_freq = [frec.append(corpus.count(w)) for x in corpus]\n",
+    "\n",
+    "#for w in corpus:\n",
+    " #    term_freq.append(corpus.count(w))\n",
+    "        \n",
     "# Write your code here"
    ]
   },
@@ -228,9 +286,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0, 1, 0, 1, 0, 0, 0, 1], [1, 1, 1, 1, 0, 1, 0, 1, 0], [1, 0, 1, 0, 0, 0, 1, 0, 0]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(term_freq)"
    ]
