--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Durante un tiempo no estuvo segura de si su marido era su marido.\n"
+     ]
+    }
+   ],
    "source": [
     "str_list = ['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n",
-    "# Your code here:\n"
+    "\n",
+    "#str_list.append(\".\")\n",
+    "#print(' '.join(str_list).rstrip())\n",
+    "\n",
+    "print(' '.join(str_list).rstrip() + '.')\n",
+    "\n"
    ]
   },
   {
@@ -50,12 +63,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grocery list['bananas', 'bread', 'brownie mix', 'broccoli']\n"
+     ]
+    }
+   ],
    "source": [
     "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
-    "# Your code here:\n"
+    "\n",
+    "food_list_lower = [f.lower() for f in food_list]\n",
+    "\n",
+    "food_list_lower_b = [n for n in food_list_lower if n.startswith(\"b\")]\n",
+    "\n",
+    "print('Grocery list' + str(food_list_lower_b))"
    ]
   },
   {
@@ -69,26 +95,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the circle with radius: 4.5 is 63.61725123519331\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
-    "\n",
     "string1 = \"The area of the circle with radius:\"\n",
     "string2  = \"is:\"\n",
     "radius = 4.5\n",
     "\n",
     "def area(x, pi = math.pi):\n",
+    "    x=pi*radius**2\n",
+    "    return x\n",
+    "\n",
+    "print(\"{} {} is {}\" .format(string1,radius,area(4.5)))\n",
+    "\n",
+    "\n",
+    "   \n",
     "    # This function takes a radius and returns the area of a circle. We also pass a default value for pi.\n",
-    "    # Input: Float (and default value for pi)\n",
     "    # Output: Float\n",
-    "    \n",
     "    # Sample input: 5.0\n",
     "    # Sample Output: 78.53981633\n",
-    "    \n",
-    "    # Your code here:\n",
-    "    \n",
+    "\n",
+    "\n",
     "    \n",
     "# Your output string here:"
    ]
@@ -106,9 +143,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Some': 2, 'say': 3, 'the': 1, 'world': 1, 'will': 1, 'end': 1, 'in': 2, 'fire': 2, 'ice': 2, 'From': 1, 'what': 1, 'I': 4, 've': 1, 'tasted': 1, 'of': 2, 'desire': 1, 'hold': 1, 'with': 1, 'those': 1, 'who': 1, 'favor': 1, 'But': 1, 'if': 1, 'it': 1, 'had': 1, 'to': 1, 'perish': 1, 'twice': 1, 'think': 1, 'know': 1, 'enough': 1, 'hate': 1, 'To': 1, 'that': 1, 'for': 1, 'destruction': 1, 'Is': 1, 'also': 1, 'great': 1, 'And': 1, 'would': 1, 'suffice': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
@@ -120,7 +165,17 @@
     "Is also great\n",
     "And would suffice.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "#poem1 = poem.strip()\n",
+    "#re.sub('[^a-zA-Z]', \" \", poem1)\n",
+    "#poem_split = poem1.replace(\"\\n\",\" \").replace(\"’\",\" \").replace(\"\\W\", \" \").split(\" \")\n",
+    "#de esta forma esta printeando las palabras con signos de puntuacion\n",
+    "\n",
+    "poem_split = re.findall(\"\\w+\", poem)\n",
+    "def freq_words(poem_split):\n",
+    "    wordfreq = [poem_split.count(p) for p in poem_split]\n",
+    "    return dict(zip(poem_split, wordfreq))\n",
+    "\n",
+    "print(freq_words(poem_split))"
    ]
   },
   {
@@ -132,9 +187,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'was', 'angry', 'with', 'my', 'friend', 'i', 'told', 'my', 'wrath', 'my', 'wrath', 'did', 'end', 'i', 'was', 'angry', 'with', 'my', 'foe', 'i', 'told', 'not', 'my', 'wrath', 'did', 'grow', 'i', 'waterd', 'fears', 'night', 'morning', 'with', 'my', 'tears', 'i', 'sunned', 'with', 'smiles', 'with', 'soft', 'deceitful', 'wiles', 'grew', 'both', 'day', 'night', 'till', 'bore', 'apple', 'bright', 'my', 'foe', 'beheld', 'shine', 'he', 'knew', 'that', 'was', 'mine', 'into', 'my', 'garden', 'stole', 'when', 'night', 'had', 'veild', 'pole', 'morning', 'glad', 'i', 'see', 'my', 'foe', 'outstretched', 'beneath', 'tree']\n"
+     ]
+    }
+   ],
    "source": [
     "blacklist = ['and', 'as', 'an', 'a', 'the', 'in', 'it']\n",
     "\n",
@@ -157,8 +220,16 @@
     "When the night had veild the pole; \n",
     "In the morning glad I see; \n",
     "My foe outstretched beneath the tree.\"\"\"\n",
+    " \n",
+    "poem_lower = poem.lower()\n",
     "\n",
-    "# Your code here:\n"
+    "#a = re.sub('[^a-zA-Z]', \" \", poem_lower).replace(\"   \", \" \").replace(\"  \",\" \")\n",
+    "a = re.sub('[^a-zA-Z]', \" \", poem_lower).replace(\"   \", \" \").replace(\"  \",\" \")\n",
+    "b = a.split(\" \")\n",
+    "\n",
+    "lst=[e for e in b if e not in blacklist]\n",
+    "lst_ok = [j for j in lst if j != '']\n",
+    "print (lst_ok)"
    ]
   },
   {
@@ -172,14 +243,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['The', 'Petals']\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"The apparition of these faces in the crowd;\n",
     "Petals on a wet, black bough.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "poem_split = poem.replace(\"\\n\", \" \").split(\" \")\n",
+    "\n",
+    "poem_list = [i for i in poem_split if i[0].isupper()]\n",
+    "print(poem_list)\n",
+    "\n"
    ]
   },
   {
@@ -191,13 +274,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1', 'ABBY4']\n"
+     ]
+    }
+   ],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "#data_list = [i for i in data if re.search(['\\d'], data)]\n",
+    "#print(data_list)\n",
+    "\n",
+    "data_nums = [i for i in data if re.search('\\d+',i)]\n",
+    "print(data_nums)"
    ]
   },
   {
@@ -213,13 +310,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1']\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
+    "\n",
+    "data_nums = [i for i in data if re.search('\\d+', i) and re.search ('[a-z]', i)]\n",
+    "print(data_nums)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
-    "# Your code here:\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
