--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,14 +380,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['T', 'P']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "poem = \"\"\"The apparition of these faces in the crowd;\n",
     "Petals on a wet, black bough.\"\"\"\n",
+    "#import re\n",
     "\n",
-    "# Your code here:\n"
+    "re.findall('[A-Z]',poem)\n"
    ]
   },
   {
@@ -399,13 +411,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1', 'ABBY4']\n"
+     ]
+    }
+   ],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
     "\n",
-    "# Your code here:\n"
+    "lst1 = []\n",
+    "\n",
+    "for i in data:\n",
+    "    if re.search('[\\d]',i):\n",
+    "        lst1.append(i)\n",
+    "\n",
+    "print(lst1)\n",
+    "\n"
    ]
   },
   {
@@ -421,13 +448,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
-    "# Your code here:\n"
+    "\n",
+    "#data2 = []\n",
+    "#for i in data:\n",
+    " #   if re.search('[\\d]', i) and re.search('[a-z]', i):\n",
+    "    #    data2.append(i)\n",
+    "        \n",
+    "\n",
+    "        \n",
+    "\n",
+    "#print(data2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#LIST\n",
+    "\n",
+    "data2=[i for i in data if re.search('[\\d]', i) and re.search('[a-z]', i)]\n",
+    "print (data2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
