Bonus nerd completado

--- a/module-1/lab-string-operations/your-code/challenge-2.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-2.ipynb
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        "['ironhack', 'cool', 'love', 'student']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,6 +429,36 @@
     " [0 0 0 1 0 1 0]\n",
     " [1 1 0 1 0 0 1]]\n",
     " ```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['am', 'at', 'cool', 'ironhack', 'is', 'love', 'student']\n",
+      "{'ironhack': 3, 'is': 4, 'cool': 2, 'love': 5, 'am': 0, 'student': 6, 'at': 1}\n",
+      "[[0 0 1 1 1 0 0]\n",
+      " [0 0 0 1 0 1 0]\n",
+      " [1 1 0 1 0 0 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "vec = CountVectorizer()\n",
+    "X = vec.fit_transform(corpus)\n",
+    "\n",
+    "print(vec.get_feature_names())\n",
+    "\n",
+    "print(vec.vocabulary_)\n",
+    "\n",
+    "print(X.toarray())"
    ]
   },
   {
