--- a/module-1/lab-string-operations/your-code/challenge-2.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-2.ipynb
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
        "['ironhack', 'cool', 'love', 'student']"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,6 +436,33 @@
     " [0 0 0 1 0 1 0]\n",
     " [1 1 0 1 0 0 1]]\n",
     " ```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ironhack': 3, 'is': 4, 'cool': 2, 'love': 5, 'am': 0, 'student': 6, 'at': 1}\n",
+      "[[0 0 1 1 1 0 0]\n",
+      " [0 0 0 1 0 1 0]\n",
+      " [1 1 0 1 0 0 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "corpus = [open(e, \"r\").read() for e in docs]\n",
+    "cv = CountVectorizer()\n",
+    "cv_fit=cv.fit_transform(corpus)\n",
+    "\n",
+    "print(cv.vocabulary_)\n",
+    "print(cv_fit.toarray())"
    ]
   }
  ],
