--- a/module-1/lab-string-operations/your-code/challenge-2.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-2.ipynb
@@ -72,19 +72,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Ironhack is cool.', 'I am a student at Ironhack.', 'I love Ironhack.']\n"
+      "['doc1.txt', 'doc2.txt', 'doc3.txt']\n",
+      "['Ironhack is cool.', 'I love Ironhack.', 'I am a student at Ironhack.']\n"
      ]
     }
    ],
    "source": [
-    "files = [f for f in os.listdir('../your-code') if f.endswith('.txt')]\n",
+    "files = sorted([f for f in os.listdir('../your-code') if f.endswith('.txt')])\n",
     "leer =[open(f, 'r').readlines()[0] for f in files] \n",
     "print(leer)"
    ]
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,14 +117,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['ironhack is cool', 'i am a student at ironhack', 'i love ironhack']\n"
+      "['ironhack is cool', 'i love ironhack', 'i am a student at ironhack']\n"
      ]
     }
    ],
@@ -155,14 +156,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['ironhack is cool', 'i am a student at ironhack', 'i love ironhack']\n"
+      "['ironhack is cool', 'i love ironhack', 'i am a student at ironhack']\n"
      ]
     }
    ],
@@ -200,22 +201,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 124,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['i', 'at', 'ironhack', 'student', 'is', 'a', 'love', 'am', 'cool']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "lst =\" \".join(corpus).split()\n",
-    "bag_of_words= (list(set(lst)))\n",
+    "#lst =\" \".join(corpus).split()\n",
+    "bag_of_words= (list(set(\" \".join(corpus).split())))\n",
     "\n",
-    "print(bag_of_words)\n"
+    "#print(bag_of_words)\n"
    ]
   },
   {
@@ -231,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,14 +279,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0, 0, 1, 0, 1, 0, 0, 0, 1], [1, 1, 1, 1, 0, 1, 0, 1, 0], [1, 0, 1, 0, 0, 0, 1, 0, 0]]\n"
+      "[[0, 0, 1, 0, 1, 0, 0, 0, 1], [1, 0, 1, 0, 0, 0, 1, 0, 0], [1, 1, 1, 1, 0, 1, 0, 1, 0]]\n"
      ]
     }
    ],
@@ -344,13 +337,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'at', 'ironhack', 'student', 'is', 'a', 'love', 'am', 'cool']\n",
+      "[[0, 0, 1, 0, 1, 0, 0, 0, 1], [1, 0, 1, 0, 0, 0, 1, 0, 0], [1, 1, 1, 1, 0, 1, 0, 1, 0]]\n",
+      "['ironhack', 'student', 'love', 'cool']\n"
+     ]
+    }
+   ],
    "source": [
     "stop_words = ['all', 'six', 'less', 'being', 'indeed', 'over', 'move', 'anyway', 'fifty', 'four', 'not', 'own', 'through', 'yourselves', 'go', 'where', 'mill', 'only', 'find', 'before', 'one', 'whose', 'system', 'how', 'somewhere', 'with', 'thick', 'show', 'had', 'enough', 'should', 'to', 'must', 'whom', 'seeming', 'under', 'ours', 'has', 'might', 'thereafter', 'latterly', 'do', 'them', 'his', 'around', 'than', 'get', 'very', 'de', 'none', 'cannot', 'every', 'whether', 'they', 'front', 'during', 'thus', 'now', 'him', 'nor', 'name', 'several', 'hereafter', 'always', 'who', 'cry', 'whither', 'this', 'someone', 'either', 'each', 'become', 'thereupon', 'sometime', 'side', 'two', 'therein', 'twelve', 'because', 'often', 'ten', 'our', 'eg', 'some', 'back', 'up', 'namely', 'towards', 'are', 'further', 'beyond', 'ourselves', 'yet', 'out', 'even', 'will', 'what', 'still', 'for', 'bottom', 'mine', 'since', 'please', 'forty', 'per', 'its', 'everything', 'behind', 'un', 'above', 'between', 'it', 'neither', 'seemed', 'ever', 'across', 'she', 'somehow', 'be', 'we', 'full', 'never', 'sixty', 'however', 'here', 'otherwise', 'were', 'whereupon', 'nowhere', 'although', 'found', 'alone', 're', 'along', 'fifteen', 'by', 'both', 'about', 'last', 'would', 'anything', 'via', 'many', 'could', 'thence', 'put', 'against', 'keep', 'etc', 'amount', 'became', 'ltd', 'hence', 'onto', 'or', 'con', 'among', 'already', 'co', 'afterwards', 'formerly', 'within', 'seems', 'into', 'others', 'while', 'whatever', 'except', 'down', 'hers', 'everyone', 'done', 'least', 'another', 'whoever', 'moreover', 'couldnt', 'throughout', 'anyhow', 'yourself', 'three', 'from', 'her', 'few', 'together', 'top', 'there', 'due', 'been', 'next', 'anyone', 'eleven', 'much', 'call', 'therefore', 'interest', 'then', 'thru', 'themselves', 'hundred', 'was', 'sincere', 'empty', 'more', 'himself', 'elsewhere', 'mostly', 'on', 'fire', 'am', 'becoming', 'hereby', 'amongst', 'else', 'part', 'everywhere', 'too', 'herself', 'former', 'those', 'he', 'me', 'myself', 'made', 'twenty', 'these', 'bill', 'cant', 'us', 'until', 'besides', 'nevertheless', 'below', 'anywhere', 'nine', 'can', 'of', 'your', 'toward', 'my', 'something', 'and', 'whereafter', 'whenever', 'give', 'almost', 'wherever', 'is', 'describe', 'beforehand', 'herein', 'an', 'as', 'itself', 'at', 'have', 'in', 'seem', 'whence', 'ie', 'any', 'fill', 'again', 'hasnt', 'inc', 'thereby', 'thin', 'no', 'perhaps', 'latter', 'meanwhile', 'when', 'detail', 'same', 'wherein', 'beside', 'also', 'that', 'other', 'take', 'which', 'becomes', 'you', 'if', 'nobody', 'see', 'though', 'may', 'after', 'upon', 'most', 'hereupon', 'eight', 'but', 'serious', 'nothing', 'such', 'why', 'a', 'off', 'whereby', 'third', 'i', 'whole', 'noone', 'sometimes', 'well', 'amoungst', 'yours', 'their', 'rather', 'without', 'so', 'five', 'the', 'first', 'whereas', 'once']\n",
     "\n",
-    "# Write your code below\n"
+    "files = sorted([f for f in os.listdir('../your-code') if f.endswith('.txt')])\n",
+    "leer =[open(f, 'r').readlines()[0] for f in files] \n",
+    "corpus = [w.lower().replace(\".\",\"\") for w in leer] \n",
+    "bag_of_words= (list(set(\" \".join(corpus).split())))\n",
+    "print(bag_of_words)\n",
+    "term_freq=[]\n",
+    "for f in corpus:\n",
+    "    z=[]\n",
+    "    for i in bag_of_words:\n",
+    "        z.append(f.split(\" \").count(i))\n",
+    "    term_freq.append(z)\n",
+    "print(term_freq)\n",
+    "cleaned_list = [dd for dd in bag_of_words if dd not in stop_words ]\n",
+    "print(cleaned_list)\n",
+    "\n"
    ]
   },
   {
