--- a/module-1/lab-advanced-regex/your-code/main.ipynb
+++ b/module-1/lab-advanced-regex/your-code/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,11 +36,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'i', 'o', 'i', 'o', 'e', 'a', 'e', 'e', 'e', 'i', 'a', 'o', 'o', 'u', 'e', 'o', 'o', 'e', 'i', 'i']\n"
+     ]
+    }
+   ],
    "source": [
-    "dfdf"
+    "print(re.findall('[aeiou]',text))"
    ]
   },
   {
@@ -52,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,10 +69,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "puppy\n",
+      "puppies\n",
+      "puppy\n"
+     ]
+    }
+   ],
+   "source": [
+    "for e in text.split():\n",
+    "    if re.search('pupp', e):\n",
+    "        print(e)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,10 +106,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ran\n",
+      "run\n"
+     ]
+    }
+   ],
+   "source": [
+    "for e in text.split():\n",
+    "    if re.search('r[a-z]n', e):\n",
+    "        print(e)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -98,10 +133,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ran\n",
+      "relay\n",
+      "race\n",
+      "run\n"
+     ]
+    }
+   ],
+   "source": [
+    "for e in text.split():\n",
+    "    if re.search('[\\br]', e):\n",
+    "        print(e)"
+   ]
   },
   {
    "cell_type": "markdown",
