--- a/module-1/lab-advanced-regex/your-code/main.ipynb
+++ b/module-1/lab-advanced-regex/your-code/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,11 +27,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'i', 'o', 'i', 'o', 'e', 'a', 'e', 'e', 'e', 'i', 'a', 'o', 'o', 'u', 'e', 'o', 'o', 'e', 'i', 'i']\n"
+     ]
+    }
+   ],
    "source": [
-    "text = \"This is going to be a sentence with a good number of vowels in it.\""
+    "text = \"This is going to be a sentence with a good number of vowels in it.\"\n",
+    "print(re.findall(\"[aeiou]\",text))\n"
    ]
   },
   {
@@ -50,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,10 +68,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "puppy\n",
+      "puppies\n",
+      "puppy\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in text.split():\n",
+    "    if re.search(\"pupp\",i):\n",
+    "        print(i)\n",
+    "    \n",
+    "#cambiar a list comprensions"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,10 +107,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ran\n",
+      "run\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for i in text.split():\n",
+    "    if re.search(\"r[a-z]n\",i):\n",
+    "        print(i)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,10 +135,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ran\n",
+      "thre\n",
+      "relay\n",
+      "race\n",
+      "run\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in text.split():\n",
+    "    if re.search(\"\\dr\",i):\n",
+    "        print(i)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -349,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
